--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,7 @@ body {
 
 header {
   position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
   width: 100%;
   height: 12vh;
   background-color: #252422;
@@ -43,8 +41,10 @@ header {
 }
 
 #menu-icon {
-  margin-left: 8%;
-  margin-right: 30px;
+  position: absolute;
+  left: 8%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #menu-icon * {
@@ -74,13 +74,18 @@ header {
 #logo{
   height: 10vh;
   transition: 0.4s;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);;
   transition-timing-function: ease-in-out;
 }
 
 #current-page-info {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   font-size: 0.7rem;
-  margin: 0;
-  margin-right: 8%;
+  right: 8%;
   transition: 0.4s;
   transition-timing-function: ease-in-out;
 }
