--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ header {
   transition-timing-function: ease-in-out;
 }
 
-#side-menu{
+#side-menu {
   height: 0;
   width: 100%;
-  background-color: #EB5E28;
+  background-color: #eb5e28;
   position: fixed;
   top: 0;
   left: 0;
@@ -31,13 +31,26 @@ header {
   transition-timing-function: ease-in-out;
 }
 
-#anchor-tags{
-  margin: 10vh auto auto 15%;
+#anchor-tags {
+  margin-top: 12vh;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  overflow: hidden;
 }
 
-#anchor-tags a{
-  display: block;
-  padding-top: 10vh;  
+#anchor-tags a {
+  margin-left: -200%;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+  font-size: 4vh;
+}
+
+#anchor-tags a, #anchor-tags a:visited, #anchor-tags a:hover, #anchor-tags a:active{
+  color: #252422;
+  text-decoration: none;
 }
 
 #menu-icon {
@@ -56,27 +69,27 @@ header {
   transition-timing-function: ease-in-out;
 }
 
-.animate-menu-icon-full #line-1{
+.animate-menu-icon-full #line-1 {
   transform: rotate(-45deg) translate(-8px, 6px);
-  background-color: #403D39;
+  background-color: #403d39;
 }
 
-.animate-menu-icon-full #line-2{
+.animate-menu-icon-full #line-2 {
   opacity: 0;
-  background-color: #403D39;
+  background-color: #403d39;
 }
 
-.animate-menu-icon-full #line-3{
+.animate-menu-icon-full #line-3 {
   transform: rotate(45deg) translate(-10px, -8px);
-  background-color: #403D39;
+  background-color: #403d39;
 }
 
-#logo{
+#logo {
   height: 10vh;
   transition: 0.4s;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);;
+  transform: translateY(-50%);
   transition-timing-function: ease-in-out;
 }
 
