--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #FFFCF2;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   height: 100vh;
@@ -95,13 +96,21 @@ header {
 
 main {
   text-align: center;
-  padding-top: 15vh;
+  padding-top: 16vh;
   margin: 0 2vh;
+}
+
+#profile-picture {
+ border-radius: 100%;
+ width: min(80vw, 30vh);
+}
+
+#name{
+  margin: 2vh 0;
 }
 
 footer {
   text-align: center;
-  margin-bottom: 0;
   background-color: #ccc5b9;
 }
 
