--- a/css/index.css
+++ b/css/index.css
@@ -5,4 +5,22 @@
 
 #name {
   margin: 2vh 0;
+  font-size: 2rem;
+}
+
+#welcome{
+margin: 0 0 2vh;
+font-weight: 600;
+font-size: 3rem;
+}
+
+#about-me-images{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.about-me-image{
+  margin: 1vh 0;
+  width: min(25vw, 10vh);
 }
