--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -113,7 +113,7 @@ header {
 
 main {
   text-align: center;
-  padding-top: 14vh;
+  padding-top: 15vh;
   margin: 0 2vh;
   color: #252422;
 }
@@ -125,6 +125,7 @@ footer {
 
 #copyright {
   display: inline-block;
-  font-size: 1rem;
-  font-weight: 200;
+  margin: 6px 0;
+  font-size: 0.6rem;
+  font-weight: 100;
 }
