--- a/css/contact-me.css
+++ b/css/contact-me.css
@@ -1,24 +1,68 @@
-#contact-details{
-    text-align: left;
-}
-
 #contact-details h1{
     margin: 0;
 }
 
 #contact-details p{
     margin: 12px 0;
-    line-height: 1.4;
+    line-height: 1.3;
 }
 
 main{
     margin-left: 8vw;
+    text-align: left;
 }
 
-#email,
-#email:visited,
-#email:hover,
-#email:active{
+#email-link,
+#email-link:visited,
+#email-link:hover,
+#email-link:active{
     text-decoration: none;
     color: #252422;
+}
+
+#contact-form h1{
+    margin: 3vh 0 18px;
+}
+
+#contact-form label{
+    font-size: 1.3rem;
+}
+
+#email{
+    width: 84vw;
+    margin: 6px 0 25px;
+    font-size: 1.1rem;
+    outline: none;
+    border: 1px solid #252422;
+    border-radius: 5px;
+}
+
+#message{
+    width: 84vw;
+    resize: vertical;
+    margin: 6px 0 10px;
+    font-size: 1.1rem;
+    outline: none;
+    border: 1px solid #252422;
+    border-radius: 5px;
+}
+
+#email:focus{
+    border: 4px solid rgba(235, 94, 40, 0.8);
+    margin: 3px -3px 22px -3px;
+}
+
+#message:focus{
+    border: 4px solid rgba(235, 94, 40, 0.8);;
+    margin: 3px -3px 7px -3px;
+}
+
+#submit{
+    background-color: #252422;
+    color: #FFFCF2;
+    border-radius: 5px;
+    border-width: 0;
+    font-size: 1.2rem;
+    padding: 6px 12px;
+    margin-bottom: 35px;
 }
