--- a/css/contact-me.css
+++ b/css/contact-me.css
@@ -60,6 +60,7 @@ main{
 #submit{
     background-color: #252422;
     color: #FFFCF2;
+    outline: none;
     border-radius: 5px;
     border-width: 0;
     font-size: 1.2rem;
