--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -1,82 +1,44 @@
+/* To set font weight & style and stop user agent stylesheet from overriding */
 * {
   font-weight: 400;
   font-family: "Poppins", sans-serif;
 }
 
+/* Force body to take up whole screen and attach main & footer to top & bottom of screen respectively */
 body {
-  background-color: #fffcf2;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #fffcf2;
 }
 
+/* Remove header from flow and fix it at the top */
 header {
+  height: 12vh;
+  width: 100vw;
+  top: 0;
   position: fixed;
   text-align: center;
-  width: 100vw;
-  height: 12vh;
-  background-color: #252422;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  top: 0;
   overflow: hidden;
+  background-color: #252422;
   transition: 0.5s;
   transition-timing-function: ease-in-out;
 }
 
-#side-menu {
-  height: 100%;
-  width: 100%;
-  background-color: #eb5e28;
-  position: fixed;
-  top: -100vh;
-  left: 0;
-  transition: 0.5s;
-  transition-timing-function: ease-in-out;
-}
-
-#anchor-tags {
-  top: 12vh;
-  height: 80vh;
-  display: flex;
-  position: fixed;
-  width: 100vw;
-  left: -100vw;
-  transition: 0.5s;
-  transition-timing-function: ease-in-out;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-start;
-  overflow: hidden;
-}
-
-#anchor-tags a {
-  margin-left: -200%;
-  transition: 0.5s;
-  transition-timing-function: ease-in-out;
-  font-size: 4vh;
-  font-weight: 500;
-}
-
-#anchor-tags a,
-#anchor-tags a:visited,
-#anchor-tags a:hover,
-#anchor-tags a:active {
-  color: #403d39;
-  text-decoration: none;
-}
-
+/* Styling of individual header elements */
 #menu-icon {
   margin-left: 8vw;
 }
 
 #menu-icon * {
-  width: 35px;
   height: 5px;
-  background-color: #ccc5b9;
+  width: 35px;
   margin: 6px 0;
+  background-color: #ccc5b9;
   transition: 0.5s;
   transition-timing-function: ease-in-out;
 }
@@ -96,15 +58,16 @@ header {
   background-color: #403d39;
 }
 
+/* Excluded from flex flow to always keep centred */
 #page-title-info {
-  color: #ccc5b9;
-  position: absolute;
-  margin: 0;
-  left: 50%;
   top: 50%;
+  left: 50%;
+  margin: 0;
+  position: absolute;
   transform: translate(-50%, -50%);
-  font-weight: 500;
   font-size: 1.5rem;
+  font-weight: 500;
+  color: #ccc5b9;
   transition: 0.4s;
   transition-timing-function: ease-in-out;
 }
@@ -116,10 +79,58 @@ header {
   transition-timing-function: ease-in-out;
 }
 
+/* Remove menu background from flow and position fixed outside of page */
+#side-menu {
+  height: 100vh;
+  width: 100vw;
+  top: -100vh;
+  left: 0;
+  position: fixed;
+  background-color: #eb5e28;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+/* Div to enable menu links to be equally spaced with respect to the div and not the page itself */
+#anchor-tags {
+  height: 80vh;
+  width: 100vw;
+  top: 12vh;
+  left: -100vw;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  overflow: hidden;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+/* Hide all menu links to the left of "#anchor-tags" div which itself is initially hidden.
+This is to allow seperate animation of each individual link */
+#anchor-tags a {
+  margin-left: -200%;
+  font-size: 4vh;
+  font-weight: 500;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+/* Specify color and text decoration for all menu links */
+#anchor-tags a,
+#anchor-tags a:visited,
+#anchor-tags a:hover,
+#anchor-tags a:active {
+  color: #403d39;
+  text-decoration: none;
+}
+
+/* Padding from top to not be obscured by header (which is excluded from flow) */
 main {
-  text-align: center;
   padding-top: 15vh;
   margin: 0 2vh;
+  text-align: center;
   color: #252422;
 }
 
@@ -129,8 +140,8 @@ footer {
 }
 
 #copyright {
-  display: inline-block;
   margin: 6px 0;
+  display: inline-block;
   font-size: 0.8rem;
   font-weight: 100;
 }
