--- a/css/quiz.css
+++ b/css/quiz.css
@@ -26,7 +26,9 @@ h2{
     width: 64vw;
     padding: 1vh 5vw;
     margin: 0;
-    border: 3px solid #403D39;
-    border-radius: 10px;
-    background-color: #CCC5B9;
+    border: 2px solid #EB5E28;
+    border-radius: 20px;
+    color: #CCC5B9;
+    background-color: #403D39;
+    cursor: pointer;
 }
