--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -155,3 +155,25 @@ footer {
   font-size: 0.8rem;
   font-weight: 100;
 }
+
+/* Noscript styling */
+#page-blur{
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 3;
+  opacity: 0.95;
+  backdrop-filter: blur(200px);
+}
+
+#page-blur h1{
+  width: 95vw;
+  top: 50vh;
+  left: 50vw;
+  position: absolute;
+  text-align: center;
+  font-size: 1.5rem;
+  transform: translate(-50%, -50%);
+}
