--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -25,7 +25,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden;
   background-color: #252422;
   transition: 0.5s;
   transition-timing-function: ease-in-out;
@@ -33,8 +32,12 @@ header {
 
 /* Styling of individual header elements */
 #menu-icon {
+  top: 0;
   margin-left: 8vw;
+  position: relative;
   cursor: pointer;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
 }
 
 #menu-icon * {
@@ -116,10 +119,33 @@ Z-index added because of conflict with buttons on quiz page */
   transition-timing-function: ease-in-out;
 }
 
+#anchor-tags-left, #anchor-tags-right{
+  height: 80vh;
+  width: 50vw;
+  top: 18vh;
+  position: fixed;
+  z-index: 2;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  overflow: hidden;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+#anchor-tags-left{
+left: -50vw;
+}
+
+#anchor-tags-right{
+left: 100vw;
+}
+
 /* Hide all menu links to the left of "#anchor-tags" div which itself is initially hidden.
 This is to allow seperate animation of each individual link */
-#anchor-tags a {
-  margin-left: -200%;
+#anchor-tags a, #anchor-tags-left a, #anchor-tags-right a{
+  margin-left: -200vw;
   font-size: 4vh;
   font-weight: 500;
   transition: 0.5s;
@@ -127,11 +153,27 @@ This is to allow seperate animation of each individual link */
   cursor: pointer;
 }
 
+#anchor-tags-left a, #anchor-tags-right a{
+  font-size: 8vh;
+}
+
+#anchor-tags-right a{
+  margin-left: 200vw;
+}
+
 /* Specify color and text decoration for all menu links */
 #anchor-tags a,
 #anchor-tags a:visited,
 #anchor-tags a:hover,
-#anchor-tags a:active {
+#anchor-tags a:active,
+#anchor-tags-left a,
+#anchor-tags-left a:visited,
+#anchor-tags-left a:hover,
+#anchor-tags-left a:active,
+#anchor-tags-right a,
+#anchor-tags-right a:visited,
+#anchor-tags-right a:hover,
+#anchor-tags-right a:active {
   color: #403d39;
   text-decoration: none;
 }
@@ -176,4 +218,36 @@ footer {
   font-size: 1.5rem;
   color: #fffcf2;
   transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 640px) {
+  header {
+    height: 15vh;
+  }
+
+  #menu-icon {
+    margin-left: 12vw;
+  }
+
+  #logo {
+    height: 10vh;
+    margin-right: 9vw;
+  }
+
+  main{
+    padding-top: 18vh;
+    margin: 0 12vw;
+  }
+
+  .push-menu-button-top#menu-icon{
+    top: 5vh;
+  }
+
+  #anchor-tags{
+    display: none;
+  }
+
+  #anchor-tags-left, #anchor-tags-right {
+    display: flex;
+  }
 }
