--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -40,6 +40,10 @@ header {
   transition-timing-function: ease-in-out;
 }
 
+.push-menu-button-top#menu-icon{
+  top: 2vh;
+}
+
 #menu-icon * {
   height: 5px;
   width: 35px;
@@ -154,7 +158,7 @@ This is to allow seperate animation of each individual link */
 }
 
 #anchor-tags-left a, #anchor-tags-right a{
-  font-size: 8vh;
+  font-size: min(8vh, 4vw);
 }
 
 #anchor-tags-right a{
@@ -220,7 +224,7 @@ footer {
   transform: translate(-50%, -50%);
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (orientation:landscape){
   header {
     height: 15vh;
   }
