--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -22,9 +22,6 @@ header {
   position: fixed;
   z-index: 2;
   text-align: center;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: #252422;
   transition: 0.5s;
   transition-timing-function: ease-in-out;
@@ -32,29 +29,35 @@ header {
 
 /* Styling of individual header elements */
 #menu-icon {
-  top: 0;
-  margin-left: 8vw;
-  position: relative;
+  height: min(5vh, 10vw);
+  width: min(6.25vh, 12.5vw);
+  top: 6vh;
+  left: 8vw;
+  transform: translate(0, -50%);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   cursor: pointer;
   transition: 0.5s;
   transition-timing-function: ease-in-out;
 }
 
 .push-menu-button-top#menu-icon{
-  top: 2vh;
+  top: 8vh;
 }
 
-#menu-icon * {
-  height: 5px;
-  width: 35px;
-  margin: 6px 0;
+#menu-icon *{
+  height: calc(min(5vh, 10vw) * 0.17);
+  width: min(6.25vh, 12.5vw);
+  margin: 0;
   background-color: #ccc5b9;
   transition: 0.5s;
   transition-timing-function: ease-in-out;
 }
 
 .animate-menu-icon #line-1 {
-  transform: rotate(-45deg) translate(-8px, 6px);
+  transform: rotate(-45deg) translate(calc(min(6.25vh, 12.5vw) * (-0.23)), calc(min(5vh, 10vw) * 0.2));
   background-color: #403d39;
 }
 
@@ -64,7 +67,7 @@ header {
 }
 
 .animate-menu-icon #line-3 {
-  transform: rotate(45deg) translate(-10px, -8px);
+  transform: rotate(45deg) translate(calc(min(6.25vh, 12.5vw) * (-0.3)), calc(min(5vh, 10vw) * (-0.3)));
   background-color: #403d39;
 }
 
@@ -75,7 +78,7 @@ header {
   margin: 0;
   position: absolute;
   transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  font-size: min(6vw, 3vh);
   font-weight: 500;
   color: #ccc5b9;
   transition: 0.4s;
@@ -84,7 +87,10 @@ header {
 
 #logo {
   height: 8vh;
-  margin-right: 6vw;
+  top: 6vh;
+  right: 6vw;
+  transform: translate(0, -50%);
+  position: absolute;
   transition: 0.4s;
   transition-timing-function: ease-in-out;
   cursor: pointer;
@@ -230,12 +236,19 @@ footer {
   }
 
   #menu-icon {
-    margin-left: 12vw;
+    top: 7.5vh;
+    left: 12vw;
+    transform: translate(0, -50%) scale(calc(min(8vh, 4vw)/2));
+  }
+
+  #page-title-info{
+    font-size: min(2.5rem, min(6vw, 4vh));
   }
 
   #logo {
     height: 10vh;
-    margin-right: 9vw;
+    top: 7.5vh;
+    right: 9vw;
   }
 
   main{
@@ -244,7 +257,7 @@ footer {
   }
 
   .push-menu-button-top#menu-icon{
-    top: 5vh;
+    top: 12.5vh;
   }
 
   #anchor-tags{
@@ -253,5 +266,15 @@ footer {
 
   #anchor-tags-left, #anchor-tags-right {
     display: flex;
+  }
+}
+
+@media screen and (min-width: 768px){
+  #page-title-info{
+    font-size: min(3rem, min(8vw, 6vh));
+  }
+
+  #menu-icon, #anchor-tags, #anchor-tags-left, #anchor-tags-right {
+    display: none;
   }
 }
