--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ font-size: 3rem;
 }
 
 #about-me-images{
+  margin: 4vh 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -23,4 +24,8 @@ font-size: 3rem;
 .about-me-image{
   margin: 1vh 0;
   width: min(25vw, 10vh);
+}
+
+#about-me-paragraph{
+  text-align: left;
 }
