--- a/css/contact-me.css
+++ b/css/contact-me.css
@@ -33,6 +33,7 @@ main{
     margin: 6px 0 25px;
     font-size: 1.1rem;
     outline: none;
+    box-sizing: border-box;
     border: 1px solid #252422;
     border-radius: 5px;
 }
@@ -43,6 +44,7 @@ main{
     margin: 6px 0 10px;
     font-size: 1.1rem;
     outline: none;
+    box-sizing: border-box;
     border: 1px solid #252422;
     border-radius: 5px;
 }
@@ -64,4 +66,11 @@ main{
     font-size: 1.2rem;
     padding: 6px 12px;
     margin-bottom: 35px;
+    transition: 0.1s ease-in-out;
+    cursor: pointer;
+}
+
+#submit:hover{
+    background-color: #EB5E28;
+    color: #252422;
 }
