--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -72,11 +72,6 @@ header {
   transition-timing-function: ease-in-out;
 }
 
-#menu-desktop-arrow{
-  position: relative;
-  top: calc(min(3rem, min(8vw, 6vh)) * (-0.02));
-}
-
 #menu-desktop-arrow *{
   height: calc(min(3rem, min(8vw, 6vh)) * 0.04);
   width: calc(min(3rem, min(8vw, 6vh)) * 0.2);
@@ -88,20 +83,20 @@ header {
 
 #desktop-line-1{
   transform-origin: 0 50%;
-  transform: rotate(45deg) translate(calc(min(3rem, min(8vw, 6vh)) * (-0.07)), -50%);
+  transform: translate(15%, -50%) rotate(45deg) translate(-50%, 0);
 }
 
 #desktop-line-2{
   transform-origin: 100% 50%;
-  transform: rotate(-45deg) translate(calc(min(3rem, min(8vw, 6vh)) * (0.07)), -50%);
+  transform: translate(-15%, -50%) rotate(-45deg) translate(50%, 0);
 }
 
 .animate-menu-desktop-icon#desktop-line-1{
-  transform: rotate(-45deg) translate(calc(min(3rem, min(8vw, 6vh)) * (-0.07)), 50%);
+  transform: translate(15%, -50%) rotate(-45deg) translate(-50%, 0);
 }
 
 .animate-menu-desktop-icon#desktop-line-2{
-  transform: rotate(45deg) translate(calc(min(3rem, min(8vw, 6vh)) * (0.07)), 50%);
+  transform: translate(-15%, -50%) rotate(45deg) translate(50%, 0);
 }
 
 #menu-desktop-anchor-tags{
