--- a/css/header-footer-nav.css
+++ b/css/header-footer-nav.css
@@ -13,7 +13,7 @@ body {
   justify-content: space-between;
   background-color: #fffcf2;
   line-height: 1.35;
-  overflow: overlay;
+  overflow-y: overlay;
 }
 
 body.hide-overflow {
@@ -80,20 +80,20 @@ header {
 
 #desktop-line-1{
   transform-origin: 0 50%;
-  transform: translate(15%, -50%) rotate(45deg) translate(-50%, 0);
+  transform: translate(16%, -50%) rotate(45deg) translate(-50%, 0);
 }
 
 #desktop-line-2{
   transform-origin: 100% 50%;
-  transform: translate(-15%, -50%) rotate(-45deg) translate(50%, 0);
+  transform: translate(-16%, -50%) rotate(-45deg) translate(50%, 0);
 }
 
 .animate-menu-desktop-icon#desktop-line-1{
-  transform: translate(15%, -50%) rotate(-45deg) translate(-50%, 0);
+  transform: translate(16%, -50%) rotate(-45deg) translate(-50%, 0);
 }
 
 .animate-menu-desktop-icon#desktop-line-2{
-  transform: translate(-15%, -50%) rotate(45deg) translate(50%, 0);
+  transform: translate(-16%, -50%) rotate(45deg) translate(50%, 0);
 }
 
 #menu-desktop-anchor-tags{
@@ -296,7 +296,6 @@ This is to allow seperate animation of each individual link */
 /* Padding from top to not be obscured by header (which is excluded from flow) */
 main {
   padding: 15vh 8vw 0;
-  margin: 0;
   text-align: center;
   color: #252422;
 }
